--- a/FinanceManager/Views/Shared/_Layout.cshtml
+++ b/FinanceManager/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
+                    <li>@Html.ActionLink("Budget", "Index", "Budget")</li>
                     <li>@Html.ActionLink("Reports", "AccountBalanceReport", "Reports")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
