--- a/FinanceManager/Views/Transactions/Index.cshtml
+++ b/FinanceManager/Views/Transactions/Index.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.TransactionDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TransactionCategory.Name)
+            @Html.DisplayFor(modelItem => item.Category.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
