--- a/FinanceManager/Views/Budget/BudgetView.cshtml
+++ b/FinanceManager/Views/Budget/BudgetView.cshtml
@@ -1,29 +1,48 @@
 ﻿<link rel="stylesheet" href='../Content/datatables.css' type="text/css" />
+
 @using FinanceManager.Models.Period
 @model FinanceManager.ViewModels.Budget.BudgetViewViewModel
 @{
     ViewBag.Title = "BudgetView";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
 <h2>Budget</h2>
-@foreach (var period in Model.Periods)
+
+@foreach (var item in Model.Items)
 {
-    @Html.DisplayFor(account => period.Name)
-<table class="table">
-    <tr>
-        <th>Category</th>
-        <th>Description</th>
-        <th>Amount</th>
-    </tr>
-    @foreach (var budgetItem in Model.GetBudgetItemsByPeriod(period))
-    {
-        <tr>
-        <td>@Html.DisplayFor(category => budgetItem.Category.Name)</td>
-        <td>@Html.DisplayFor(description => budgetItem.Description)</td>
-        <td>@Html.DisplayFor(amount => budgetItem.Amount)</td>
-        </tr>
-    }
-</table>
-   }
+    <div class="row">
+        <div class="container col-sm-8">
+
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <span class="font-weight-bold">Period: </span> @Html.DisplayFor(periodName => item.Period.Name) 
+                        </div>
+                        <div class="col-sm-6 text-right">
+                        <span class="font-weight-bold">Total:</span> @Html.DisplayFor(periodTotal => item.Total)
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    @foreach (var budgetItem in item.Items)
+                    {
+                        <div class="row">
+                            <div class="col-sm-3 text-right">
+                                @Html.DisplayFor(category => budgetItem.Category.Name)
+                            </div>
+                            <div class="col-sm-7">
+                                @Html.DisplayFor(description => budgetItem.Description)
+                            </div>
+                            <div class="col-sm-2 text-right">
+                                @Html.DisplayFor(amount => budgetItem.Amount)
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+        <div class="container col-sm-4"></div>
+    </div>
+}
 
