--- a/FinanceManager/Views/Budget/BudgetView.cshtml
+++ b/FinanceManager/Views/Budget/BudgetView.cshtml
@@ -1,5 +1,4 @@
-﻿<link rel="stylesheet" href='../Content/datatables.css' type="text/css" />
-
+﻿
 @using FinanceManager.Models.Period
 @model FinanceManager.ViewModels.Budget.BudgetViewViewModel
 @{
@@ -7,24 +6,32 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Budget</h2>
+<br />
+<div class="row">
+    <div class="col-sm-2">
+        <a href='@Url.Action("Create", "Budget")'>New BudgetItem</a>
+    </div>
+</div>
 
 @foreach (var item in Model.Items)
 {
-    <div class="row">
+    var itemId = "A" + item.Period.Name.Replace(" ", "").Replace("/", "");
+    <div class="row pb-2">
         <div class="container col-sm-8">
 
             <div class="card">
-                <div class="card-header">
+                <div class="card-header" data-toggle="collapse" data-target="#@itemId"
+                     href="#@itemId">
                     <div class="row">
                         <div class="col-sm-6">
-                            <span class="font-weight-bold">Period: </span> @Html.DisplayFor(periodName => item.Period.Name) 
+                            <span class="font-weight-bold">Period: </span> @Html.DisplayFor(periodName => item.Period.Name)
                         </div>
                         <div class="col-sm-6 text-right">
-                        <span class="font-weight-bold">Total:</span> @Html.DisplayFor(periodTotal => item.Total)
+                            <span class="font-weight-bold">Total:</span> @Html.DisplayFor(periodTotal => item.Total)
                         </div>
                     </div>
                 </div>
-                <div class="card-body">
+                <div id="@itemId" class="card-body panel-collapse collapse in">
                     @foreach (var budgetItem in item.Items)
                     {
                         <div class="row">
@@ -36,6 +43,9 @@
                             </div>
                             <div class="col-sm-2 text-right">
                                 @Html.DisplayFor(amount => budgetItem.Amount)
+                                <a href='@Url.Action("Delete", "Budget", new { id = @budgetItem.BudgetItemId })'>
+                                    <img src='@Url.Content("~/Content/Images/icons8-delete-50.png")' style="width: 12px; height: 10px" />
+                                </a>
                             </div>
                         </div>
                     }
@@ -44,5 +54,6 @@
         </div>
         <div class="container col-sm-4"></div>
     </div>
+
 }
 
