--- a/FinanceManager/Views/Transactions/TransactionsView.cshtml
+++ b/FinanceManager/Views/Transactions/TransactionsView.cshtml
@@ -1,18 +1,38 @@
-﻿<link rel="stylesheet" href='../../Content/datatables.css' type="text/css" />
-@model FinanceManager.ViewModels.Transactions.TransactionsViewViewModel
+﻿@model FinanceManager.ViewModels.Transactions.TransactionsViewViewModel
 @{
     ViewBag.Title = "TransactionsView";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Transactions</h2>
+<br />
+
+
+<div class="row">
+    <div class="col-sm-2">
+        <a href='@Url.Action("Create", "Transactions")'>New Transaction</a>
+    </div>
+
+    <div class="col-sm-3">
+        @using (Html.BeginForm("Index", "Transactions", FormMethod.Get))
+        {
+            <div class="row">
+                @Html.Label("Grouping:", htmlAttributes: new { @class = "control-label col-4" })
+                @Html.DropDownList("groupType", Model.GroupingItems, new { onchange = "form.submit();", style = "height:25px" })
+            </div>
+        }
+    </div>
+</div>
+
 @foreach (var item in Model.TransactionGroupViewModels)
 {
-    <div class="row">
+    var itemId = "A" + item.GroupName.Replace(" ", "").Replace("/", "");
+    <div class="row pb-2">
         <div class="container col-sm-12">
 
             <div class="card">
-                <div class="card-header">
+                <div class="card-header" data-toggle="collapse" data-target="#@itemId" 
+                   href="#@itemId">
                     <div class="row">
                         <div class="col-sm-6">
                             <span class="font-weight-bold">@Html.DisplayFor(periodName => Model.GroupType): </span> @Html.DisplayFor(groupName => item.GroupName)
@@ -22,24 +42,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-body">
+                <div id="@itemId">
                     @foreach (var transaction in item.Transactions)
                     {
-                        <div class="row">
-                            <div class="col-sm-2 text-right">
-                                @Html.DisplayFor(date => transaction.TransactionDate)
-                            </div>
-                            <div class="col-sm-2">
+                        <div class="row" style="border-top: 1px solid lightgray">
+                            <div class="col-1">
                                 @Html.DisplayFor(transactionAccount => transaction.Account.Name)
                             </div>
-                            <div class="col-sm-2">
+                            <div class="col-2">
+                                @Html.DisplayFor(date => transaction.TransactionDate)
+                            </div>
+
+
+                            <div class="col-2">
                                 @Html.DisplayFor(transactionCategory => transaction.Category.Name)
                             </div>
-                            <div class="col-sm-4 ">
+                            <div class="col-5 ">
                                 @Html.DisplayFor(description => transaction.Description)
                             </div>
-                            <div class="col-sm-2 text-right">
+                            <div class="col-2 text-right">
                                 @Html.DisplayFor(amount => transaction.Amount)
+                                <a href='@Url.Action("Delete", "Transactions", new { id = @transaction.TransactionId })'>
+                                    <img src='@Url.Content("~/Content/Images/icons8-delete-50.png")' style="width: 12px; height: 10px" />
+                                </a>
                             </div>
                         </div>
                     }
