Budget Vs Expenditure!

--- a/FinanceManager/Views/Budget/BudgetView.cshtml
+++ b/FinanceManager/Views/Budget/BudgetView.cshtml
@@ -15,7 +15,7 @@
 
 @foreach (var item in Model.Items)
 {
-    var itemId = "A" + item.Period.Name.Replace(" ", "").Replace("/", "");
+    var itemId = "B" + item.Period.Name.Replace(" ", "").Replace("/", "");
     <div class="row pb-2">
         <div class="container col-sm-8">
 
