--- a/FinanceManager/Views/Reports/ExpenditurePerCategoryPerPeriodReport.cshtml
+++ b/FinanceManager/Views/Reports/ExpenditurePerCategoryPerPeriodReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model FinanceManager.Models.Reports.ExpenditurePerCategoryPerPeriodReport
+﻿@model FinanceManager.ViewModels.Reports.ExpenditurePerCategoryPerPeriodReport
 <link rel="stylesheet" href='../../Content/datatables.css' type="text/css"/>
 @{
     ViewBag.Title = "Expenditure Report";
