--- a/FinanceManager/Views/Transactions/TransactionsView.cshtml
+++ b/FinanceManager/Views/Transactions/TransactionsView.cshtml
@@ -26,7 +26,7 @@
 
 @foreach (var item in Model.TransactionGroupViewModels)
 {
-    var itemId = "A" + item.GroupName.Replace(" ", "").Replace("/", "");
+    var itemId = "T" + item.GroupName.Replace(" ", "").Replace("/", "");
     <div class="row pb-2">
         <div class="container col-sm-12">
 
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="@itemId">
+                <div id="@itemId" class="card-body panel-collapse collapse in">
                     @foreach (var transaction in item.Transactions)
                     {
                         <div class="row" style="border-top: 1px solid lightgray">
