--- a/FinanceManager/Views/Transactions/Create.cshtml
+++ b/FinanceManager/Views/Transactions/Create.cshtml
@@ -7,64 +7,71 @@
 
 <h2>Create</h2>
 
+<div class="container col-lg-12">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>Transaction</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group row">
-        @Html.Label("Account", htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold text-right" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.SelectedAccount, Model.AccountItems,new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SelectedAccount, "", new { @class = "text-danger" })
+
+        <div class="form-horizontal">
+            <h4>Transaction</h4>
+            <hr />
+            <div class="row pb-2">
+                <div class="container col-lg-6">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group row">
+                        @Html.Label("Account", htmlAttributes: new { @class = "control-label col-4 font-weight-bold text-right" })
+                        <div class="col-8">
+                            @Html.DropDownListFor(model => model.SelectedAccount, Model.AccountItems, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.SelectedAccount, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row ">
+                        @Html.Label("Date", htmlAttributes: new { @class = "control-label col-4 font-weight-bold text-right" })
+                        <div class="col-8">
+                            @Html.EditorFor(model => model.TransactionDate, new { htmlAttributes = new { @class = "form-control datepicker" } })
+                            @Html.ValidationMessageFor(model => model.TransactionDate, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        @Html.Label("Category", htmlAttributes: new { @class = "control-label col-4 font-weight-bold text-right" })
+                        <div class="col-8">
+                            @Html.DropDownListFor(model => model.SelectedCategory, Model.CategoryItems, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.SelectedCategory, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group row ">
+                        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-4 font-weight-bold text-right" })
+                        <div class="col-8">
+                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-4 font-weight-bold text-right" })
+                        <div class="col-8">
+                            @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @type = "number", @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-offset-2 col-8">
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+                <div class="container col-lg-6"></div>
+            </div>
         </div>
-    </div>
-    <div class="form-group row ">
-        @Html.Label("Date", htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold text-right" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.TransactionDate, new { htmlAttributes = new { @class = "form-control datepicker" } })
-            @Html.ValidationMessageFor(model => model.TransactionDate, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group row">
-        @Html.Label("Category", htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold text-right" })
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.SelectedCategory,Model.CategoryItems, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SelectedCategory, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group row ">
-        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold text-right" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-        </div>
+    }
+
+    <div>
+        @Html.ActionLink("Back to List", "Index")
     </div>
 
-    <div class="form-group row">
-        @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2 font-weight-bold text-right" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @type = "number", @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
