--- a/FinanceManager/Views/Reports/BudgetVsExpenditureView.cshtml
+++ b/FinanceManager/Views/Reports/BudgetVsExpenditureView.cshtml
@@ -11,42 +11,42 @@
 {
     var itemId = "BVP" + item.Period.Name.Replace(" ", "").Replace("/", "");
     <div class="row pb-2">
-        <div class="container col-sm-8">
+        <div class="container col-lg-8 col-12">
 
             <div class="card">
                 <div class="card-header" data-toggle="collapse" data-target="#@itemId"
                      href="#@itemId">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-7">
                             <span class="font-weight-bold">Period: </span> @Html.DisplayFor(periodName => item.Period.Name)
                         </div>
-                        <div class="col-sm-6 text-right">
+                        <div class="col-5 text-right">
                             <span class="font-weight-bold">Total:</span> @Html.DisplayFor(periodTotal => item.Total)
                         </div>
                     </div>
                 </div>
                 <div id="@itemId" class="card-body panel-collapse collapse in">
                     <div class="row font-weight-bold">
-                        <div class="col-sm-4 text-right">
+                        <div class="col-4 text-right">
                             @Html.Label("Category")
                         </div>
-                        <div class="col-sm-4 text-right">
+                        <div class="col-4 text-right">
                             @Html.Label("Budgeted")
                         </div>
-                        <div class="col-sm-4 text-right">
+                        <div class="col-4 text-right">
                             @Html.Label("Spent")
                         </div>
                     </div>
                     @foreach (var vm in item.ViewModelItems)
                     {
                         <div class="row">
-                            <div class="col-sm-4 text-right">
+                            <div class="col-4 text-right">
                                 @Html.DisplayFor(category => vm.Category.Name)
                             </div>
-                            <div class="col-sm-4 text-right">
+                            <div class="col-4 text-right">
                                 @Html.DisplayFor(description => vm.BudgetAmount)
                             </div>
-                            <div class="col-sm-4 text-right">
+                            <div class="col-4 text-right">
                                 @Html.DisplayFor(amount => vm.TransactionAmount)
                             </div>
                         </div>
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="container col-sm-4"></div>
+        <div class="container col-4"></div>
     </div>
 
 }
