--- a/FinanceManager/Views/Shared/_Layout.cshtml
+++ b/FinanceManager/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new {@class = "nav-link"})</li>
                 <li class="nav-item">@Html.ActionLink("Transactions", "Index", "Transactions", null, new {@class = "nav-link"})</li>
                 <li class="nav-item">@Html.ActionLink("Budget", "Index", "Budget", null, new {@class = "nav-link"})</li>
-                <li class="nav-item">@Html.ActionLink("Reports", "AccountBalanceReport", "Reports", null, new {@class = "nav-link"})</li>
+                <li class="nav-item">@Html.ActionLink("Reports", "BudgetVsExpenditureReport", "Reports", null, new {@class = "nav-link"})</li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home", null, new {@class = "nav-link"})</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new {@class = "nav-link"})</li>
             </ul>
