--- a/FinanceManager/Views/Shared/_Layout.cshtml
+++ b/FinanceManager/Views/Shared/_Layout.cshtml
@@ -14,11 +14,12 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">@Html.ActionLink("Transactions", "Index", "Transactions", new { groupType = "Account" }, new {@class = "nav-link"})</li>
-                <li class="nav-item">@Html.ActionLink("Budget", "Index", "Budget", null, new {@class = "nav-link"})</li>
-                <li class="nav-item">@Html.ActionLink("Reports", "BudgetVsExpenditureReport", "Reports", null, new {@class = "nav-link"})</li>
-            </ul>
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">@Html.ActionLink("Transactions", "Index", "Transactions", new { groupType = "Account" }, new { @class = "nav-link" })</li>
+            <li class="nav-item">@Html.ActionLink("Budget", "Index", "Budget", null, new { @class = "nav-link" })</li>
+            <li class="nav-item">@Html.ActionLink("Reports", "BudgetVsExpenditureReport", "Reports", null, new { @class = "nav-link" })</li>
+            <li class="nav-item">@Html.ActionLink("Savings Reports", "SavingsReport", "Reports", null, new { @class = "nav-link" })</li>
+        </ul>
     </div>
 </div>
 <div class="container body-content">
